--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,26 +1,40 @@
-html,
-body {
+
+* {
+  box-sizing: border-box;
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+html, body, #__next {
+  width: 100%;
+  height: 100%;
 }
 
-* {
-  box-sizing: border-box;
+ 
+
+::-webkit-scrollbar {
+  width: 16px;
+  height: 16px;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: white;
-    background: black;
-  }
+::-webkit-scrollbar-track {
+  border-radius: 100vh;
+  background: #edf2f7;
 }
+
+::-webkit-scrollbar-thumb {
+  background: #cbd5e0;
+  border-radius: 100vh;
+  border: 3px solid #edf2f7;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #a0aec0
+}
+
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
