--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,31 +7,16 @@
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
-html, body, #__next {
+
+
+#__next,body,html {
   width: 100%;
   height: 100%;
+  overflow-x: hidden
 }
 
- 
-
-::-webkit-scrollbar {
-  width: 16px;
-  height: 16px;
-}
-
-::-webkit-scrollbar-track {
-  border-radius: 100vh;
-  background: #edf2f7;
-}
-
-::-webkit-scrollbar-thumb {
-  background: #cbd5e0;
-  border-radius: 100vh;
-  border: 3px solid #edf2f7;
-}
-
-::-webkit-scrollbar-thumb:hover {
-  background: #a0aec0
+body {
+  background-color: #1e293b
 }
 
 
