--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,3 @@
-
 * {
   box-sizing: border-box;
   padding: 0;
@@ -7,17 +6,33 @@
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
-
-
-#__next,body,html {
+#__next,
+body,
+html {
   width: 100%;
   height: 100%;
-  overflow-x: hidden
+  overflow-x: hidden;
 }
 
 body {
-  background-color: #1e293b
+  background-color: #1e293b;
 }
+
+#progress {
+  position: fixed;
+  z-index: 50;
+  left: 0;
+  top: 0;
+  width: 100vw;
+  height: 1vh;
+  transform-origin: 0 50%;
+  /* transform: scaleX(0); */
+  background: red;
+  overflow-y:scroll;
+  overflow-x:hidden;
+
+}
+ 
 
 
 @tailwind base;
